# freework-scraping-exemple

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.mjs
config/: urls.py
config/settings/: __init__.py  base.py  dev.py  production.py
freework/static/: manifest.json
freework/static/assets/: main-BemSq9bl.js  main-Cht9Q9H2.css
freework/templates/: base.html  home.html
freework/users/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py
freework/users/migrations/: 0001_initial.py
frontend/src/: main.js
