[project]
name = "freework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.3",
    "django-extensions>=3.2.3",
    "argon2-cffi>=23.1.0",
    "django-environ>=0.11.2",
    "django-debug-toolbar>=4.4.6",
    "django-vite>=3.0.5",
    "django-template-partials>=24.4",
    "crispy-tailwind>=1.0.3",
    "scrapy>=2.11.2",
]
